# fast-resume-rs

./: .releaserc.json  CLAUDE.md  Cargo.toml  Cargo.toml.recommended  README.md  build_binary.py  pyproject.toml
.github/workflows/: ci-rust.yml  workflow.yml
python/fast_resume/adapters/: claude.py  codex.py  copilot.py  copilot_vscode.py  crush.py  gemini.py  opencode.py  vibe.py
python/fast_resume/tui/: app.py  modal.py  results_table.py
src/: config.rs  index.rs  lib.rs  main.rs  query.rs  search.rs
src/adapters/: claude.rs  codex.rs  copilot.rs  copilot_vscode.rs  crush.rs  gemini.rs  kiro.rs  mod.rs  opencode.rs  vibe.rs
src/fast_resume/: __init__.py  cli.py  config.py  index.py  search.py
src/fast_resume/adapters/: __init__.py  gemini.py  kiro.py
src/fast_resume/tui/: app.py  filter_bar.py  preview.py  styles.py
src/tui/: app.rs  filter_bar.rs  icons.rs  input_widget.rs  mod.rs  modal.rs  preview.rs  results_list.rs  style.rs
src/util/: proc.rs
tests/: adapter_claude.rs  adapter_codex.rs  adapter_copilot_vscode.rs  adapter_crush.rs  adapter_gemini.rs  adapter_kiro.rs  adapter_opencode.rs  adapter_vibe.rs  index.rs  integration_resume.rs  query_parser.rs  test_cli.py  test_gemini_adapter.py  test_integration.py  test_kiro_adapter.py  test_search.py  test_tui.py  tui.rs
