[package]
name = "fr"
version = "0.1.0"
edition = "2021"

[lib]
name = "fr"
path = "src/lib.rs"

[[bin]]
name = "fr"
path = "src/main.rs"

[dev-dependencies]
tempfile = "3"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
jiff = "0.2"
anyhow = "1"
thiserror = "2"
directories = "5"
clap = { version = "4.6", features = ["derive"] }
tantivy = "0.26"
rayon = "1"
parking_lot = "0.12"

[profile.release]
lto = "thin"
codegen-units = 1
