[package]
name = "fr"
version = "0.1.0"
edition = "2021"

[lib]
name = "fr"
path = "src/lib.rs"

[[bin]]
name = "fr"
path = "src/main.rs"

[dev-dependencies]
tempfile = "3"
rusqlite = { version = "0.39", features = ["bundled"] }
serde_json = "1"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
jiff = "0.2"
anyhow = "1"
thiserror = "2"
directories = "6"
clap = { version = "4.6", features = ["derive"] }
tantivy = "0.26"
rayon = "1"
parking_lot = "0.12"
ratatui = "0.30"
crossterm = "0.29"
tui-input = { version = "0.15", features = ["ratatui-crossterm"] }
rusqlite = { version = "0.39", features = ["bundled"] }
ratatui-image = { version = "11", default-features = false, features = ["crossterm", "image-defaults"] }
image = "0.25"
regex = "1"
arboard = { version = "3", features = ["wayland-data-control"] }
which = "6"

[profile.release]
strip = "symbols"
lto = "thin"
codegen-units = 1

[profile.release-small]
inherits = "release"
opt-level = "z"
strip = true
lto = true
codegen-units = 1
