[project]
name = "fast-resume-plus"
version = "1.17.2"
description = "Fuzzy finder for coding agent session history (fast-resume fork with Kiro, Gemini, and TUI improvements)"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "textual>=7.4.0",
    "rich>=13.0.0,<14.3.2",  # 14.3.2 causes freeze with images in iTerm
    "click>=8.0.0",
    "humanize>=4.14.0",
    "textual-image>=0.8.4",
    "orjson>=3.10.0",
    "tantivy>=0.25.0",
]

[project.scripts]
fr = "fast_resume.cli:main"
fast-resume = "fast_resume.cli:main"
fast-resume-plus = "fast_resume.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fast_resume"]
artifacts = ["src/fast_resume/assets/*.png"]

[dependency-groups]
dev = [
    "cairosvg>=2.8.2",
    "pre-commit>=4.5.1",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-xdist>=3.8.0",
    "ty>=0.0.1a13",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-n auto"
filterwarnings = [
    "ignore:Palette images with Transparency:UserWarning",
]
